{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 35,
  "lineage": "af77f1ba-8fd4-816b-e043-65a316b1f39e",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sampleApp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:loadbalancer/app/sampleApp-alb-staging/200c2c9e146ad246",
            "arn_suffix": "app/sampleApp-alb-staging/200c2c9e146ad246",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sampleApp-alb-staging-999258829.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:loadbalancer/app/sampleApp-alb-staging/200c2c9e146ad246",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sampleApp-alb-staging",
            "security_groups": [
              "sg-0dc8254966b894010"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010a5807ab48043d4"
              },
              {
                "subnet_id": "subnet-0d91e8e4a3266b3ed"
              }
            ],
            "subnets": [
              "subnet-010a5807ab48043d4",
              "subnet-0d91e8e4a3266b3ed"
            ],
            "tags": {
              "Environment": "staging"
            },
            "tags_all": {
              "Environment": "staging"
            },
            "vpc_id": "vpc-0859c445d93fc9895",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicSG"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:listener/app/sampleApp-alb-staging/200c2c9e146ad246/ed57782b5d012560",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:targetgroup/sampleApp-http-tg-staging/bfe71aac5777c8e1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:listener/app/sampleApp-alb-staging/200c2c9e146ad246/ed57782b5d012560",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:loadbalancer/app/sampleApp-alb-staging/200c2c9e146ad246",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.sampleApp_alb",
            "module.loadbalancer_module.aws_lb_target_group.sampleApp_http_tg",
            "module.network_module.aws_security_group.publicSG"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sampleApp_http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:targetgroup/sampleApp-http-tg-staging/bfe71aac5777c8e1",
            "arn_suffix": "targetgroup/sampleApp-http-tg-staging/bfe71aac5777c8e1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/icons/apache2_pb2.gif",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:733971523228:targetgroup/sampleApp-http-tg-staging/bfe71aac5777c8e1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sampleApp-http-tg-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0859c445d93fc9895"
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privateSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:733971523228:security-group/sg-071f44bc9eeca3bd9",
            "description": "Private Security Group for EC2 in staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-071f44bc9eeca3bd9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc8254966b894010"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "privateSG_staging",
            "name_prefix": "",
            "owner_id": "733971523228",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0859c445d93fc9895"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_security_group.publicSG"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:733971523228:security-group/sg-0dc8254966b894010",
            "description": "Public Security Group for ELB in staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0dc8254966b894010",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicSG_staging",
            "name_prefix": "",
            "owner_id": "733971523228",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0859c445d93fc9895"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}